--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -71,4 +71,16 @@
   .library {
     width: 100%;
   }
+  h2 {
+    color: white;
+  }
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
 }
