--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -48,6 +48,10 @@ input[type="range"]::-moz-range-thumb {
   border: none;
 }
 
+input[type="range"].onoff::slider-thumb {
+  appearance: none;
+}
+
 .track {
   background: lightblue;
   width: 100%;
