--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -22,10 +22,15 @@
   cursor: pointer;
   transition: background 0.5s ease;
   img {
-    width: 30%;
+    width: 100px;
   }
   &:hover {
     background: rgb(233, 242, 247);
+  }
+  svg {
+    position: absolute;
+    color: white;
+    opacity: 0;
   }
 }
 
@@ -60,6 +65,9 @@
 
 .selected {
   background: rgb(198, 220, 238);
+  svg {
+    opacity: 0.7;
+  }
 }
 
 .active-library {
@@ -67,12 +75,28 @@
   opacity: 1;
 }
 
+.library-image {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media screen and (max-width: 768px) {
   .library {
     width: 100%;
   }
-  h2 {
+  .library-name {
     color: white;
+  }
+  .library-nav {
+    position: sticky;
+    top: 0;
+    background: white;
+  }
+  .library-play {
+    position: absolute;
   }
 }
 
